tests/suite/snapshots/suite__check__tests__check__bad-class-shadowing5.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-class-shadowing5.xi:3:5]
   │
 3 │     a: int
   ·     ───┬──  
   ·        ╰──── Name already bound in environment
───╯

